<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/StepDescription"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Previous"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toLeftOf="@+id/Next"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/Previous"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/Media"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/StepDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/Media_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>
    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/next"
        android:textSize="12sp"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/Previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/previous"
        android:textSize="12sp"
        android:background="@drawable/bg_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/Next"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>